# Statki

./: CMakeLists.txt
src/: main.cpp
src/Plansza/: Plansza.cpp  Plansza.hpp
src/Statki/: Derived_Statek_Static_Init_Template.hpp  Statek.cpp  Statek.hpp
src/Statki/Czteromasztowiec/: Czteromasztowiec.cpp  Czteromasztowiec.hpp
src/Statki/Dwumasztowiec/: Dwumasztowiec.cpp  Dwumasztowiec.hpp
src/Statki/Jednomasztowiec/: Jednomasztowiec.cpp  Jednomasztowiec.hpp
src/Statki/Trzymasztowiec/: Trzymasztowiec.cpp  Trzymasztowiec.hpp
